fix env variables

--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ POSTGRES_DB=DB
 TYPEORM_SYNCHRONIZE=true
 TYPEORM_LOGGING=true
 
-REDIS_HOST=redis
+REDIS_HOST=localhost
 REDIS_PORT=6379
 CACHE_TTL=7890000
 MAX_ITEM_IN_CACHE=100
