--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
 		"axios": "^0.21.1",
 		"clsx": "^1.1.1",
 		"craco-alias": "^3.0.1",
+		"date-fns": "^2.22.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-hook-form": "^7.6.6",
